tests/should_fail/terminates/invalid_variant_type.stderr
error[E0277]: the trait bound `S: creusot_contracts::logic::WellFounded` is not satisfied
  --> invalid_variant_type.rs:8:15
   |
 8 |     #[variant(x)]
   |               ^ unsatisfied trait bound
   |
help: the trait `creusot_contracts::logic::WellFounded` is not implemented for `S`
  --> invalid_variant_type.rs:4:1
   |
 4 | struct S;
   | ^^^^^^^^
   = help: the following other types implement trait `creusot_contracts::logic::WellFounded`:
             &T
             ()
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
             (T0, T1, T2, T3, T4, T5, T6)
           and 16 others
note: required by a bound in `creusot_contracts::__stubs::variant_check`
  --> ./creusot-contracts/src/stubs.rs:58:25
   |
58 | pub fn variant_check<R: crate::logic::WellFounded>(_: R) -> R {
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `variant_check`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
